typewriter animation for my name

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
-  --primary-clr: #845ef7;
+  --primary-clr: #7048e8;
   --background-clr: #212529;
   --text-clr: #dee2e6;
 }
