--- a/src/Components/Description.module.css
+++ b/src/Components/Description.module.css
@@ -1,38 +1,56 @@
-.content {
+.description {
   max-width: 64rem;
   margin: 0 auto;
+  padding: 0 2.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  align-self: flex-start;
-  justify-self: flex-end;
   margin-bottom: 3.6rem;
 }
 
-.content img {
-  width: 30%;
+.description img {
+  width: 20rem;
   border-radius: 50%;
   border: 0.6rem solid var(--primary-clr);
   margin-bottom: 1.6rem;
 }
 
-.content h1 {
+.description h1 {
   font-size: 5.2rem;
   font-weight: 500;
   letter-spacing: 6px;
   margin-bottom: 3.6rem;
 }
 
-.content p {
+.description p {
   font-size: 1.8rem;
   letter-spacing: 1px;
   line-height: 1.1;
 }
 
-.content h2 {
+.description h2 {
   font-size: 1.8rem;
   align-self: flex-start;
   border-bottom: 3px solid var(--primary-clr);
   margin-bottom: 1.6rem;
+}
+
+@media (max-width: 640px) {
+  .description {
+    margin-bottom: 1.6rem;
+  }
+
+  .description img {
+    margin-bottom: 0.8rem;
+  }
+
+  .description h1 {
+    font-size: 3.6rem;
+    margin-bottom: 1.6rem;
+  }
+
+  .description h2 {
+    margin-bottom: 0.8rem;
+  }
 }
