--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 1.6rem;
+  gap: 2.4rem;
   font-size: 2.4rem;
   font-weight: 500;
   padding: 1.2rem 2.4rem;
@@ -26,4 +26,11 @@
 
 .nav img {
   height: 2.4rem;
+}
+
+@media (max-width: 640px) {
+  .nav {
+    justify-content: center;
+    margin-bottom: 1.6rem;
+  }
 }
