--- a/src/Components/Stack.module.css
+++ b/src/Components/Stack.module.css
@@ -1,11 +1,18 @@
 .stack-container {
-  margin: 0 auto;
   max-width: 64rem;
+  margin: 0 auto;
+  padding: 1.2rem 2.4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
   margin-bottom: 3.6rem;
 }
 
 .stack-container h2 {
   font-size: 1.8rem;
+  align-self: flex-start;
   border-bottom: 3px solid var(--primary-clr);
   margin-bottom: 1.6rem;
 }
@@ -19,13 +26,21 @@
 }
 
 .tech img {
-  width: 4rem;
+  width: 3.6rem;
 }
 
-.stack-container a {
-  display: block;
-  text-align: end;
-  font-size: 1.2rem;
-  text-decoration: none;
-  color: inherit;
+@media (max-width: 640px) {
+  .stack-container {
+    margin-bottom: 1.6rem;
+  }
+
+  .stack-container h2 {
+    margin-bottom: 0.8rem;
+  }
+
+  .tech {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    margin-bottom: 0.8rem;
+  }
 }
