--- a/src/Components/Stack.module.css
+++ b/src/Components/Stack.module.css
@@ -1,13 +1,12 @@
 .stack-container {
   max-width: 64rem;
   margin: 0 auto;
-  padding: 1.2rem 2.4rem;
+  padding: 0 2.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  margin-bottom: 3.6rem;
 }
 
 .stack-container h2 {
@@ -18,29 +17,23 @@
 }
 
 .tech {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1.6rem;
-  margin-bottom: 1.6rem;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  column-gap: 2.4rem;
+  row-gap: 1.2rem;
 }
 
 .tech img {
-  width: 3.6rem;
+  width: 4.8rem;
 }
 
-@media (max-width: 640px) {
-  .stack-container {
-    margin-bottom: 1.6rem;
-  }
-
+@media (max-width: 400px) {
   .stack-container h2 {
     margin-bottom: 0.8rem;
   }
 
   .tech {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    margin-bottom: 0.8rem;
+    column-gap: 1.2rem;
+    row-gap: 1.2rem;
   }
 }
