--- a/src/Components/Profile/Description.module.css
+++ b/src/Components/Profile/Description.module.css
@@ -1,62 +1,61 @@
 .description {
   max-width: 64rem;
-  margin: 0 auto;
+  margin: auto 0;
   padding: 0 2.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 3.6rem;
 }
 
-.description img {
+.description .mugshot {
   width: 20rem;
   border-radius: 50%;
   border: 0.6rem solid var(--primary-clr);
   margin-bottom: 1.6rem;
 }
 
-.description h1 {
+.description .name {
   font-size: 5.2rem;
   font-weight: 500;
   letter-spacing: 6px;
   margin-bottom: 3.6rem;
 }
 
-.description p {
-  font-size: 1.8rem;
-  letter-spacing: 1px;
-  line-height: 1.1;
-}
-
-.description h2 {
+.description .question {
   font-size: 1.8rem;
   align-self: flex-start;
   border-bottom: 3px solid var(--primary-clr);
   margin-bottom: 1.6rem;
 }
 
-@media (max-width: 640px) {
-  .description h1 {
+.description .answer {
+  font-size: 1.8rem;
+  letter-spacing: 1px;
+  line-height: 1.1;
+  margin-bottom: 3.6rem;
+}
+
+@media (max-width: 920px) {
+  .description .name {
     font-size: 3.6rem;
   }
 }
 
 @media (max-width: 400px) {
-  .description {
-    margin-bottom: 1.6rem;
-  }
-
-  .description img {
+  .description .mugshot {
     margin-bottom: 0.8rem;
   }
 
-  .description h1 {
-    font-size: 3.6rem;
+  .description .name {
     margin-bottom: 1.6rem;
   }
 
-  .description h2 {
+  .description .question {
     margin-bottom: 0.8rem;
+  }
+
+  .description .answer {
+    margin-bottom: 1.6rem;
   }
 }
