--- a/src/Components/Profile/Nav.module.css
+++ b/src/Components/Profile/Nav.module.css
@@ -4,13 +4,12 @@
   align-items: center;
   justify-content: flex-start;
   gap: 2.4rem;
-  font-size: 2.4rem;
-  font-weight: 500;
   padding: 1.2rem 2.4rem;
-  margin-bottom: 3.6rem;
 }
 
-.nav a {
+.nav .link {
+  font-size: 2.4rem;
+  font-weight: 500;
   text-decoration: none;
   color: inherit;
   display: flex;
@@ -20,22 +19,16 @@
   transition: all 0.3s ease-in-out;
 }
 
-.nav a:hover {
+.nav .link:hover {
   color: var(--primary-clr);
 }
 
-.nav img {
+.nav .icon {
   height: 2.4rem;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 1024px) {
   .nav {
     justify-content: center;
-  }
-}
-
-@media (max-width: 400px) {
-  .nav {
-    margin-bottom: 1.6rem;
   }
 }
