--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -3,4 +3,9 @@
   height: 100vh;
 
   color: var(--text-clr);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
