--- a/src/Components/Profile/Stack.module.css
+++ b/src/Components/Profile/Stack.module.css
@@ -1,7 +1,5 @@
 .stack-container {
-  max-width: 64rem;
-  margin: 0 auto;
-  padding: 0 2.4rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,7 +7,7 @@
   overflow: hidden;
 }
 
-.stack-container h2 {
+.stack-container .question {
   font-size: 1.8rem;
   align-self: flex-start;
   border-bottom: 3px solid var(--primary-clr);
@@ -23,12 +21,12 @@
   row-gap: 1.2rem;
 }
 
-.tech img {
+.tech .icon {
   width: 4.8rem;
 }
 
 @media (max-width: 400px) {
-  .stack-container h2 {
+  .stack-container .question {
     margin-bottom: 0.8rem;
   }
 
