started working on the experience section

--- a/src/Components/Projects/Projects.module.css
+++ b/src/Components/Projects/Projects.module.css
@@ -1,12 +1,141 @@
-.project-container {
-  width: 100%;
-  height: 100vh;
+.nav {
+  max-width: 100%;
+  min-height: 100vh;
+  background-color: var(--purple-background-clr);
 
-  background-position: center;
-  background-size: cover;
-  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-image: radial-gradient(var(--background-clr) 1px, transparent 0);
+  background-size: 40px 40px;
+  background-position: -25px -25px;
 }
 
-.image {
+.nav .content {
+  max-width: 64rem;
+  padding: 0 2.4rem;
+
+  text-transform: uppercase;
+  font-weight: 500;
+  color: var(--yelow-text-clr);
+  text-shadow: 3px -3px 1px var(--background-clr);
+}
+
+.nav .content .title {
+  font-size: 6.4rem;
+  letter-spacing: 6px;
+  margin-bottom: 3.6rem;
+}
+
+.nav .content .link-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 1.6rem;
+}
+
+.nav .content .link-group .link a {
+  font-size: 4.8rem;
+  margin-bottom: 0.3rem;
+  text-decoration: none;
+  color: inherit;
+  transition: all 0.3s linear;
+}
+
+.nav .content .link-group .link .border {
+  height: 5px;
   width: 100%;
+  background-color: var(--text-clr);
+  box-shadow: 3px -3px 0px rgba(0, 0, 0, 0.6);
+}
+
+/* BLINKING ARROW */
+.arrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.6rem;
+}
+
+.arrow span {
+  opacity: 0;
+  font-size: 3.6rem;
+}
+
+.arrow:hover span {
+  animation: blinker 0.3s linear infinite;
+}
+
+.arrow:hover .link {
+  color: var(--text-clr);
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 1;
+  }
+}
+
+/* CERTIFICATES */
+.certificates {
+  background-color: #862e9c;
+  max-width: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-image: radial-gradient(var(--background-clr) 1px, transparent 0);
+  background-size: 40px 40px;
+  background-position: -25px -25px;
+}
+
+.certificates .content {
+  max-width: 64rem;
+  padding: 0 2.4rem;
+
+  text-transform: uppercase;
+  font-weight: 500;
+  color: var(--yelow-text-clr);
+  text-shadow: 3px -3px 1px var(--background-clr);
+}
+
+.certificates .content .title {
+  font-size: 6.4rem;
+  letter-spacing: 6px;
+  margin-bottom: 3.6rem;
+}
+
+/* PROJECTS */
+.projects {
+  background-color: #364fc7;
+  max-width: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-image: radial-gradient(var(--background-clr) 1px, transparent 0);
+  background-size: 40px 40px;
+  background-position: -25px -25px;
+}
+
+.projects .content {
+  max-width: 64rem;
+  padding: 0 2.4rem;
+
+  text-transform: uppercase;
+  font-weight: 500;
+  color: var(--yelow-text-clr);
+  text-shadow: 3px -3px 1px var(--background-clr);
+}
+
+.projects .content .title {
+  font-size: 6.4rem;
+  letter-spacing: 6px;
+  margin-bottom: 3.6rem;
 }
