--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -1,6 +1,6 @@
 .profile-container {
-  width: 100%;
-  height: 100vh;
+  min-width: 100%;
+  max-height: 100vh;
 
   color: var(--text-clr);
 
@@ -8,4 +8,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  position: sticky;
+  top: 0;
+  left: 0;
 }
