experince split into smaller components

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   --text-clr: #dee2e6;
 
   --purple-background-clr: #5f3dc4;
-  --yelow-text-clr: #fcc419;
+  --yellow-text-clr: #fcc419;
 }
 
 * {
