--- a/src/Components/Experience/Certificates.module.css
+++ b/src/Components/Experience/Certificates.module.css
@@ -1,5 +1,5 @@
 .certificates {
-  background-color: #862e9c;
+  background-color: var(--grape-background-clr);
   max-width: 100%;
   min-height: 100vh;
 
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
 
-  background-image: radial-gradient(var(--background-clr) 1px, transparent 0);
+  background-image: radial-gradient(var(--shdw-clr) 1px, transparent 0);
   background-size: 40px 40px;
   background-position: -25px -25px;
 }
@@ -15,15 +15,58 @@
 .certificates .content {
   max-width: 64rem;
   padding: 0 2.4rem;
-
   text-transform: uppercase;
   font-weight: 500;
-  color: var(--yellow-text-clr);
-  text-shadow: 3px -3px 1px var(--background-clr);
+  color: var(--light-text-clr);
+  text-shadow: 3px -3px 1px var(--shdw-clr);
 }
 
 .certificates .content .title {
   font-size: 6.4rem;
+  color: var(--yellow-text-clr);
   letter-spacing: 6px;
   margin-bottom: 3.6rem;
+}
+
+.certificates .content .link-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+}
+
+.certificates .content .link-group .link {
+  font-size: 1.6rem;
+  text-decoration: none;
+  color: inherit;
+  transition: all 0.3s linear;
+}
+
+.certificates .content .link-group .link:hover {
+  color: var(--hover-clr);
+}
+
+/* BLINKING ARROW */
+.arrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.6rem;
+}
+
+.arrow span {
+  color: var(--yellow-text-clr);
+  opacity: 0;
+  font-size: 1.6rem;
+}
+
+.arrow:hover span {
+  animation: blinker 0.3s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 1;
+  }
 }
