--- a/src/Components/Experience/Projects.module.css
+++ b/src/Components/Experience/Projects.module.css
@@ -1,5 +1,5 @@
 .projects {
-  background-color: #364fc7;
+  background-color: var(--cyan-background-clr);
   max-width: 100%;
   min-height: 100vh;
 
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
 
-  background-image: radial-gradient(var(--background-clr) 1px, transparent 0);
+  background-image: radial-gradient(var(--shdw-clr) 1px, transparent 0);
   background-size: 40px 40px;
   background-position: -25px -25px;
 }
@@ -15,11 +15,10 @@
 .projects .content {
   max-width: 64rem;
   padding: 0 2.4rem;
-
   text-transform: uppercase;
   font-weight: 500;
-  color: var(--yellow-text-clr);
-  text-shadow: 3px -3px 1px var(--background-clr);
+  color: var(--light-text-clr);
+  text-shadow: 3px -3px 1px var(--shdw-clr);
 }
 
 .projects .content .title {
