certificates responsive design

--- a/src/Components/Experience/Certificates.module.css
+++ b/src/Components/Experience/Certificates.module.css
@@ -19,6 +19,11 @@
   font-weight: 500;
   color: var(--light-text-clr);
   text-shadow: 3px -3px 1px var(--shdw-clr);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .certificates .content .title {
@@ -33,7 +38,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1.6rem;
+  gap: 2.4rem;
 }
 
 .certificates .content .link-group .link {
@@ -68,5 +73,15 @@
 @keyframes blinker {
   50% {
     opacity: 1;
+  }
+}
+
+@media (max-width: 420px) {
+  .certificates .content .title {
+    font-size: 3.6rem;
+  }
+
+  .certificates .content .link-group .link {
+    font-size: 1.6rem;
   }
 }
