--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,9 @@ body {
 
 @media (max-width: 640px) {
   .container {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
