--- a/src/Components/Experience/Synopsis.module.css
+++ b/src/Components/Experience/Synopsis.module.css
@@ -33,7 +33,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1.6rem;
+  gap: 2.4rem;
 }
 
 .synopsis .content .link-group .link {
@@ -76,5 +76,19 @@
 @keyframes blinker {
   50% {
     opacity: 1;
+  }
+}
+
+@media (max-width: 420px) {
+  .synopsis .content .title {
+    font-size: 3.6rem;
+  }
+
+  .synopsis .content .link-group .link {
+    font-size: 2.6rem;
+  }
+
+  .arrow span {
+    font-size: 2.6rem;
   }
 }
