--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -1,5 +1,5 @@
 .profile-container {
-  min-width: 100%;
+  max-width: 100%;
   max-height: 100vh;
 
   color: var(--text-clr);
@@ -17,5 +17,6 @@
 @media (max-width: 640px) {
   .profile-container {
     position: unset;
+    min-height: 100vh;
   }
 }
