--- a/src/Components/Profile/Summary/Summary.module.css
+++ b/src/Components/Profile/Summary/Summary.module.css
@@ -9,7 +9,7 @@
 }
 
 .summary .mugshot {
-  width: 20rem;
+  width: 24rem;
   border-radius: 50%;
   border: 0.6rem solid var(--primary-clr);
   margin-bottom: 1.6rem;
@@ -37,6 +37,10 @@
 }
 
 @media (max-width: 920px) {
+  .summary .mugshot {
+    width: 18rem;
+  }
+
   .summary .name {
     font-size: 3.6rem;
   }
