--- a/src/Components/Experience/Projects.module.css
+++ b/src/Components/Experience/Projects.module.css
@@ -26,3 +26,13 @@
   letter-spacing: 6px;
   margin-bottom: 3.6rem;
 }
+
+@media (max-width: 420px) {
+  .projects .content .title {
+    font-size: 3.6rem;
+  }
+
+  .projects .content .link-group .link {
+    font-size: 1.6rem;
+  }
+}
