--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body {
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--primary-clr);
-  border-radius: 1.6rem;
+  border-radius: 16px;
 
   border: 3px solid var(--background-clr);
 }
