--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   --hover-clr: #adb5bd;
 
   --blue-background-clr: #1864ab;
-  --grape-background-clr: #862e9c;
+  --teal-background-clr: #087f5b;
   --cyan-background-clr: #0b7285;
 
   /* MISC */
