--- a/src/Components/Experience/Synopsis.module.css
+++ b/src/Components/Experience/Synopsis.module.css
@@ -14,7 +14,7 @@
 
 .synopsis .content {
   max-width: 64rem;
-  padding: 0 2.4rem;
+  padding: 2.4rem;
   text-transform: uppercase;
   font-weight: 500;
   color: var(--light-text-clr);
@@ -22,6 +22,7 @@
 
 .synopsis .content .title {
   font-size: 6.4rem;
+  text-align: center;
   color: var(--yellow-text-clr);
   text-shadow: 3px -3px 1px var(--shdw-clr);
   letter-spacing: 6px;
@@ -38,7 +39,6 @@
 
 .synopsis .content .link-group .link {
   font-size: 4.8rem;
-  text-shadow: 2px -2px 1px var(--shdw-clr);
   text-decoration: none;
   color: inherit;
   transition: all 0.3s linear;
