--- a/src/Components/Experience/Projects.module.css
+++ b/src/Components/Experience/Projects.module.css
@@ -4,6 +4,7 @@
   min-height: 100vh;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
@@ -12,21 +13,25 @@
   background-position: -25px -25px;
 }
 
+.projects .title {
+  font-size: 6.4rem;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--dark-text-clr);
+  letter-spacing: 6px;
+  margin-bottom: 2.4rem;
+
+  padding: 0.3rem 0.6rem;
+  background-color: var(--yellow-background-clr);
+  box-shadow: 4px -4px 0 var(--shdw-clr);
+  border-radius: 6px;
+}
+
 .projects .content {
   max-width: 64rem;
   padding: 2.4rem;
-  text-transform: uppercase;
   font-weight: 500;
   color: var(--light-text-clr);
-}
-
-.projects .content .title {
-  font-size: 6.4rem;
-  text-align: center;
-  color: var(--yellow-text-clr);
-  text-shadow: 3px -3px 1px var(--shdw-clr);
-  letter-spacing: 6px;
-  margin-bottom: 3.6rem;
 }
 
 .projects .content .grid {
@@ -37,6 +42,8 @@
 
 .projects .content .grid .project {
   max-width: 32rem;
+  color: inherit;
+  text-decoration: none;
   padding: 0.6rem 1.2rem;
   border-radius: 6px;
   transition: all 0.2s linear;
@@ -44,6 +51,7 @@
 
 .projects .content .grid .project h3 {
   font-size: 1.8rem;
+  text-transform: uppercase;
   text-align: center;
   margin-bottom: 1.2rem;
 }
@@ -78,8 +86,9 @@
 }
 
 @media (max-width: 420px) {
-  .projects .content .title {
+  .projects .title {
     font-size: 3.6rem;
+    margin-bottom: 1.2rem;
   }
 
   .projects .content .grid {
@@ -88,6 +97,6 @@
   }
 
   .projects .content .grid .project {
-    max-width: 24rem;
+    max-width: 22rem;
   }
 }
