--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -2,7 +2,7 @@
   max-width: 100%;
   max-height: 100vh;
 
-  color: var(--text-clr);
+  color: var(--light-text-clr);
 
   display: flex;
   flex-direction: column;
