--- a/src/Components/Experience/Experience.module.css
+++ b/src/Components/Experience/Experience.module.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 3.6rem;
 
   background-image: radial-gradient(var(--shdw-clr) 1px, transparent 0);
   background-size: 40px 40px;
@@ -35,12 +36,11 @@
 }
 
 .container .title {
-  font-size: 6.4rem;
+  font-size: 5.2rem;
   text-transform: uppercase;
   text-align: center;
   color: var(--dark-text-clr);
   letter-spacing: 6px;
-  margin-bottom: 3.6rem;
 
   padding: 0.3rem 0.6rem;
   background-color: var(--yellow-background-clr);
@@ -56,7 +56,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   gap: 2.4rem;
 }
 
@@ -69,6 +68,10 @@
 @media (max-width: 420px) {
   .container .title {
     font-size: 3.6rem;
+  }
+
+  .synopsis-link {
+    font-size: 2.4rem;
   }
 
   .grid {
