--- a/src/Components/Profile/Nav.module.css
+++ b/src/Components/Profile/Nav.module.css
@@ -28,6 +28,12 @@
 
 @media (max-width: 1024px) {
   .nav {
+    margin-bottom: 3.6rem;
+  }
+}
+
+@media (max-width: 420px) {
+  .nav {
     justify-content: center;
   }
 }
