--- a/src/index.css
+++ b/src/index.css
@@ -55,11 +55,8 @@ body {
   grid-template-columns: 1fr 1fr;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 1024px) {
   .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: block;
   }
 }
