work done on responsive design

--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -17,6 +17,6 @@
 @media (max-width: 1024px) {
   .profile-container {
     position: unset;
-    min-height: 100vh;
+    max-height: unset;
   }
 }
