--- a/src/Components/Experience/Experience.module.css
+++ b/src/Components/Experience/Experience.module.css
@@ -2,13 +2,13 @@
   background-color: var(--teal-background-clr);
   max-width: 100%;
   min-height: 100vh;
-  padding: 1.2rem 2.4rem;
+  padding: 2.4rem 3.6rem;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 3.6rem;
+  gap: 6.4rem;
 
   background-image: radial-gradient(var(--shdw-clr) 1px, transparent 0);
   background-size: 40px 40px;
@@ -56,6 +56,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 2.4rem;
 }
 
@@ -66,6 +67,10 @@
 }
 
 @media (max-width: 420px) {
+  .container {
+    gap: 4.8rem;
+  }
+
   .container .title {
     font-size: 3.6rem;
   }
