--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -1,7 +1,7 @@
 .profile-container {
   max-width: 100%;
   max-height: 100vh;
-  padding: 1.2rem 2.4rem;
+  padding: 2.4rem 3.6rem;
 
   color: var(--light-text-clr);
 
@@ -18,5 +18,6 @@
   .profile-container {
     position: unset;
     max-height: unset;
+    min-height: 100vh;
   }
 }
